# homelab

./: .envrc  .gitignore  .sops.yaml  .tool-versions  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  Taskfile.yml  ansible.cfg  pyproject.toml  requirements.txt  taskfile.yaml
.claude/: settings.local.json
.github/: CODEOWNERS  renovate.json5
.github/workflows/: ci.yaml  lint-markdown.yaml  lint-shell.yaml  lint.yaml  renovate-schedule.yaml
.taskfiles/: alexispaul.yml  flux.yml  format.yml  rook.yml  terraform.yml
.taskfiles/argo/: taskfile.yaml
.taskfiles/kubernetes/: Taskfile.yaml
.taskfiles/sops/: Taskfile.yaml
.taskfiles/tailscale/: taskfile.yaml
.taskfiles/talos/: Taskfile.yaml
.taskfiles/workstation/: Taskfile.yaml  brewfile
cluster/apps/: kustomization.yaml
cluster/apps/chrisabel/: deployment.yaml  ingress.yaml  service.yaml
cluster/apps/cloudflared/: configmap.yaml  deployment.yaml  secret.sops.yaml
cluster/apps/disconnect/: deployment-2023.yaml  deployment.yaml  ingress.yaml  (+3 more)
cluster/base/: cluster-secrets.sops.yaml  cluster-settings.yaml
cluster/flux-system/: gotk-components.yaml  gotk-sync.yaml
flux-system/: gotk-sync.yaml
kubernetes/argocd/: README.md
kubernetes/bootstrap/: helmfile.yaml
provision/ansible/: requirements.yml
scripts/: kubeconform.sh
secrets/: cloudflared.sops.yaml
terraform/: .terraform.lock.hcl  .tool-versions  dns_alexispaul.net.tf  dns_bonjourinc.com.tf  dns_paul-kiernan.com.tf  dns_paulinomial.com.tf  dns_paulynomial.com.tf  main.tf  providers.tf  state-encryption.sops.yaml  terraform.tfstate
(+273 files in other folders)
