[tool.poetry]
name = "homelab"
version = "1.0.0"
description = ""
authors = ["Paul Kiernan <hi@paulynomial.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
