[tool.poetry]
name = "homelab"
version = "1.0.0"
description = ""
authors = ["Paul Kiernan <hi@paulynomial.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.9.0"
pre-commit = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
